--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "tabulate>=0.9.0",
     "thefuzz>=0.22.1",
     "uuid7>=0.1.0",
+    "pytesseract>=0.3.13",
 ]
 
 [project.scripts]
