--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
-  "manifest_version": "0.2",
+  "manifest_version": "0.3",
   "name": "Windows-MCP",
   "version": "0.6.2",
   "description": "MCP Server that enables Claude to interact with Windows OS",
-  "long_description": "Windows-MCP is an open-source project that enables seamless integration between AI agents and the Windows operating system. Acting as an MCP server, it bridges the gap between large language models (LLMs) and the Windows OS, allowing agents to perform tasks such as **file navigation, application control, UI interaction, QA testing, and more**.\n\n**KEY FEATURES**\n- **Seamless Windows Integration**: Interacts natively with Windows UI elements, opens applications, controls windows, simulates user input, and more.\n- **Use Any LLM (Vision Optional)**: Does not rely on traditional computer vision techniques or fine-tuned models. Works with any LLM, reducing complexity and setup time.\n- **Rich Toolset for UI Automation**: Includes tools for keyboard and mouse control, window management, and capturing window or UI state.\n- **Lightweight & Open-Source**: Minimal dependencies with full source code available under the MIT license.\n- **Customizable & Extendable**: Easily adapt or extend tools to suit custom automation workflows or AI integrations.\n- **Real-Time Interaction**: Typical latency between actions ranges from `0.2` to `0.9` seconds, depending on system load, active applications, and LLM inference speed.\n\n**MINIMUM REQUIREMENTS**\n- Python 3.13 or higher\n- UV Package Manager\nThis MCP server requires UV, a fast Python package manager.\nInstallation:\n`curl -LsSf https://astral.sh/uv/install.sh | sh`\nFor detailed installation instructions, [see the UV documentation](https://github.com/astral-sh/uv)",
+  "long_description": "Windows-MCP is an open-source project that enables seamless integration between AI agents and the Windows operating system. Acting as an MCP server, it bridges the gap between large language models (LLMs) and the Windows OS, allowing agents to perform tasks such as **file navigation, application control, UI interaction, QA testing, and more**.\n\n**KEY FEATURES**\n- **Seamless Windows Integration**: Interacts natively with Windows UI elements, opens applications, controls windows, simulates user input, and more.\n- **Use Any LLM (Vision Optional)**: Does not rely on traditional computer vision techniques or fine-tuned models. Works with any LLM, reducing complexity and setup time.\n- **Rich Toolset for UI Automation**: Includes tools for keyboard and mouse control, window management, and capturing window or UI state.\n- **Lightweight & Open-Source**: Minimal dependencies with full source code available under the MIT license.\n- **Customizable & Extendable**: Easily adapt or extend tools to suit custom automation workflows or AI integrations.\n- **Real-Time Interaction**: Typical latency between actions ranges from `0.2` to `0.9` seconds, depending on system load, active applications, and LLM inference speed.\n\n**MINIMUM REQUIREMENTS**\n- Python 3.13 or higher\n- UV Package Manager\nThis MCP server requires UV, a fast Python package manager.\nInstallation:\n`curl -LsSf https://astral.sh/uv/install.sh | sh`\nFor detailed installation instructions, [see the UV documentation](https://github.com/astral-sh/uv)\n\n**OPTIONAL: OCR Support**\nTo use the OCR feature (Snapshot with use_ocr=True), install Tesseract OCR via PowerShell:\n`winget install UB-Mannheim.TesseractOCR`",
   "author": {
     "name": "CursorTouch",
     "url": "https://cursortouch.com/"
@@ -28,11 +28,34 @@
         "windows-mcp"
       ],
       "env": {
-        "ANONYMIZED_TELEMETRY": "${user_config.anonymized_telemetry}"
+        "ANONYMIZED_TELEMETRY": "${user_config.anonymized_telemetry}",
+        "MODE": "${user_config.mode}",
+        "SANDBOX_ID": "${user_config.sandbox_id}",
+        "API_KEY": "${user_config.api_key}"
       }
     }
   },
   "user_config": {
+    "mode": {
+      "type": "string",
+      "title": "Mode (local or remote)",
+      "description": "Set to 'local' to run directly on your machine, or 'remote' to use cloud-hosted Windows automation via windowsmcp.io — spin up a Windows sandbox in seconds with no local setup needed. Remote mode requires a Sandbox ID and API Key from the dashboard at windowsmcp.io.",
+      "required": false,
+      "default": "local"
+    },
+    "sandbox_id": {
+      "type": "string",
+      "title": "Sandbox ID",
+      "description": "The sandbox/VM identifier from the windowsmcp.io dashboard. Only required when Mode is set to 'remote'.",
+      "required": false
+    },
+    "api_key": {
+      "type": "string",
+      "title": "API Key",
+      "description": "Your Windows-MCP API key from the windowsmcp.io dashboard. Only required when Mode is set to 'remote'.",
+      "sensitive": true,
+      "required": false
+    },
     "anonymized_telemetry": {
       "type": "boolean",
       "title": "Anonymized Telemetry",
@@ -56,7 +79,7 @@
     },
     {
       "name": "Snapshot",
-      "description": "Captures complete desktop state including: system language, focused/opened windows, interactive elements (buttons, text fields, links, menus with coordinates), and scrollable areas. Set use_vision=True to include screenshot. Set use_dom=True for browser content to get web page elements instead of browser UI. Set use_ocr=True to extract visible text from the screen using Tesseract OCR (useful when accessibility tree misses text, e.g. images, remote desktop, custom-rendered UIs). Always call this first to understand the current desktop state before taking actions."
+      "description": "Captures complete desktop state including: system language, focused/opened windows, interactive elements (buttons, text fields, links, menus with coordinates), and scrollable areas. Set use_vision=True to include screenshot. Set use_dom=True for browser content to get web page elements instead of browser UI. Set use_ocr=True to extract visible text from the screen using Tesseract OCR (requires Tesseract: winget install UB-Mannheim.TesseractOCR). Useful when accessibility tree misses text, e.g. images, remote desktop, custom-rendered UIs. Always call this first to understand the current desktop state before taking actions."
     },
     {
       "name": "Click",
